Fri Jan 28 02:32:30 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* Removed method Wee::Session#current_page and replaced it by
	  #current_callbacks.

	* Wee::Session no longer applies a snapshot if the snapshot equals the current 
	  state of the components tree 

	* removed duplicate code from continuation/session.rb

Fri Jan 28 02:10:31 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* added 'wee' binary which generates a sample application and
	  recommended directory structure for you (similar to the 'rails' command).

Fri Jan 28 00:22:21 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* Method Wee::Utils.app_for: Removed the id_seed option. Use id_gen
	  instead, which expects a IdGenerator object (default is now the much more
	  secure Md5IdGenerator). 

	* Wee::Request: Refactored a lot. Use =/ instead of @ as delimeter for
	  the request_handler_id/page_id part ('@' looks ugly in Konqueror, as
	  it is displayed as '%40')

	* Wee::Application: Don't send a RedirectResponse when no
	  request_handler_id was given. This wasn't neccessary and would
	  break when introducing cookies.

Fri Jan 28 00:07:52 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* renamed wee/idgen.rb to wee/idgen/simple.rb and
	  wee/md5_idgen.rb to wee/idgen/md5.rb

Fri Jan 28 00:04:46 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* added Md5IdGenerator, removed method #current from SimpleIdGenerator

Thu Jan 27 18:45:44 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* Implemented a new OgScaffolder, which now is more like Rails one.

Thu Jan 27 15:23:59 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* Component#add_decoration returns now self. Example where this is
	  useful:

	    app = Wee::Utils.app_for {
	      HelloWorld.new.add_decoration(Wee::PageDecoration.new("Hello World"))
	    }
	  
	* add non-Rubygems way to install Wee: install.rb

--------------------------------------------------------------------
TAGGED 0.5.0